# common-shared

./: .cspell.json  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc2  .gitignore  .gitlab-ci.yml  .jscpd.json  .start.sh.handlebars  .start.sh.hbs  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  Taskfile-ansible.yml  Taskfile-common.yml  Taskfile.yml  Taskfile.yml.handlebars  esbuild.bundled.js  gl-codequality.json  log.js  log.sh  package-lock.json  package.hbs.json  package.json  package.json.handlebars  pnpm-lock.yaml  pyproject.toml  requirements.txt  results.json  start.sh  test.sh  tslint.json  update.lib.sh  update.sh
.config/: Brewfile  commitlintrc.cjs  cspell.json  eslintcache  hbs.js  log  start.hbs.sh
.gitlab/: renovate.json
bash/: async.sh  checkbox_input.sh  inquirer.sh  list_input.sh  text_input.sh
common/: .gitlab-ci.yml  Taskfile.hbs.yml  Taskfile.yml  Taskfile.yml.handlebars  Taskfile.yml.liquid  package.hbs.json  package.json.handlebars  package.json.liquid  pyproject.hbs.toml  pyproject.toml.handlebars  pyproject.toml.liquid  start.sh  torchlight.config.js
deprecated/: remark.ts.txt  semver-compare.sh
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md
files/: .eslintrc.js  .gitignore
hey.yml/: Taskfile-ansible.yml.yml
inquirer/: inquirer.sh
local/: package-lock.json  remove-gitignore.sh  remove.sh  squash.sh  ventoy-download.json  ventoy.json
scripts/: environment.js  environment.js.2  init.sh  log.sh  npm-prepare.sh  software.sh  virtualization-platform.js
taskfiles/: README.md  Taskfile-ansible.yml  Taskfile-docker.yml  (+26 more)
(+1133 files in other folders)
